Comprehensive upgrade of README and coding instructions
Co-authored-by: sutinse <24417893+sutinse@users.noreply.github.com>